Все задания Этапа 2 выполнены (5), ошибки исправлены (4)